push 21 database modifications (Flyway migration changes) for stripes and reservations